# small-desktop-screen

./: CMakeLists.txt  LICENSE  README.md  README_EN.md  专业版.md  专业版_CN.md  专业版_EN.md  基础版.md  基础版_CN.md  基础版_EN.md
hello_world/: README.md  README_EN.md
hello_world/main/: CMakeLists.txt  Task_Creation_main.c
main/: CMakeLists.txt  app_main.c
main/include/: ds_system_data.h
main/include/fs/: ds_spiffs.h
main/include/hal/: ds_gpio.h  ds_nvs.h
main/src/: ds_system_data.c
main/src/fs/: ds_spiffs.c
main/src/hal/: ds_gpio.c  ds_nvs.c  ds_timer.c
timer_group/: README.md
timer_group/main/: CMakeLists.txt  timer_group_example_main.c
timer_group/main/src/hal/: ds_timer.c
